<?xml version="1.0"?>
<package format="2">
  <name>seerep-hdf5-core</name>
  <version>0.0.1</version>
  <description> The seerep hdf5 core package </description>

  <maintainer email="mark.niemeyer@dfki.de">Mark Niemeyer</maintainer>

  <license>BSD-3</license>

  <url type="website">TODO</url>

  <author email="mark.niemeyer@dfki.de">Mark Niemeyer</author>

  <depend>seerep-msgs</depend>
  <depend>geometry-msgs</depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
