<?xml version="1.0"?>
<package format="2">
  <name>seerep-hdf5-pb</name>
  <version>0.0.1</version>
  <description> The seerep-hdf5-pb package </description>

  <maintainer email="mark.hoellmann@dfki.de">Mark Höllmann</maintainer>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD-3</license>

  <url type="website">TODO</url>

  <author email="mark.hoellmann@dfki.de">Mark Höllmann</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <depend>seerep-msgs</depend>
  <depend>seerep-hdf5-core</depend>
  <depend>seerep-core</depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
