<?xml version="1.0"?>
<package format="2">
  <name>seerep_hdf5_py</name>
  <version>0.0.1</version>
  <description> The seerep_hdf5_py package </description>

  <maintainer email="mark.niemeyer@dfki.de">Mark Niemeyer</maintainer>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD-3</license>

  <url type="website">TODO</url>

  <author email="mark.niemeyer@dfki.de">Mark Niemeyer</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="malte.kleine_piening@dfki.de">Malte kleine Piening</author>

  <depend>seerep_msgs</depend>
  <depend>seerep-hdf5-core</depend>
  <depend>pybind11_catkin</depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
