<?xml version="1.0"?>
<package format="2">
  <name>seerep_hdf5_ros</name>
  <version>0.0.1</version>
  <description>Package to write ROS messages directly into hdf5</description>

  <maintainer email="mark.niemeyer@dfki.de">Mark Niemeyer</maintainer>
  <author email="julian.arkenau@dfki.de"> Julian Arkenau </author>

  <license>BSD-3</license>

  <url type="website">TODO</url>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>seerep-hdf5-core</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
