<?xml version="1.0"?>
<package format="2">
  <name>seerep_ros_communication</name>
  <version>0.0.1</version>
  <description>
    Converts incoming ROS messages to ProtoBuf messages. It use grpc to transfer the data to a configured server or to dump it directly to a HDF5 file
  </description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD-3</license>

  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <depend>seerep-msgs</depend>
  <depend>seerep-com</depend>
  <depend>seerep-io-pb</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>topic_tools</depend>
  <depend>seerep_ros_conversions</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
